# lg-add-memory

./: README.md  add_memory.py  main.py  myfirstnotebook.py  pyproject.toml
